# Antbot

./: README.md  README.rst
catkin_ws/devel/: .catkin  .rosinstall  local_setup.sh  setup.sh
catkin_ws/devel/include/roboteq_msgs/: Command.h  Feedback.h  Status.h
catkin_ws/devel/lib/pkgconfig/: bagtocsv.pc  plate_reader.pc  roboteq_diagnostics.pc  roboteq_driver.pc  roboteq_msgs.pc  signal_strength.pc  trog_2dnav.pc  trog_control.pc  trog_description.pc  trog_mapping.pc  trog_sensors.pc
catkin_ws/devel/lib/roboteq_driver/: driver_node
catkin_ws/devel/lib/trog_control/: trog_control_node
catkin_ws/devel/lib/trog_sensors/: sonar_node
catkin_ws/src/bagtocsv/: CMakeLists.txt
catkin_ws/src/bagtocsv/launch/: bagtocsv.launch
catkin_ws/src/bagtocsv/src/: 2020-11-20-10-03-47.bag  csvgen.py
catkin_ws/src/plate_reader/: CMakeLists.txt  package.xml  setup.py
catkin_ws/src/roboteq/roboteq_driver/: CMakeLists.txt
catkin_ws/src/roboteq/roboteq_driver/include/roboteq_driver/: channel.h
catkin_ws/src/roboteq/roboteq_driver/launch/: roboteq.launch
catkin_ws/src/roboteq/roboteq_driver/mbs/: genc  script.hex  script.mbs
catkin_ws/src/roboteq/roboteq_driver/src/: CMakeLists.txt  channel.cpp  controller.cpp
catkin_ws/src/signal_strength/: CMakeLists.txt  csv-01.cap  csv-01.csv  csv-01.kismet.csv  csv-01.kismet.netxml  package.xml
catkin_ws/src/signal_strength/launch/: signal_strength.launch
catkin_ws/src/signal_strength/src/: signal_strength_airodump.py  signal_strength_airodump_orig.py  signal_strength_iwlist.py
catkin_ws/src/trog_2dnav/: README.md
catkin_ws/src/trog_2dnav/config/: base_local_planner_params.yaml  costmap_common_params.yaml  dwa_local_planner_params.yaml  global_costmap_params.yaml  local_costmap_params.yaml  move_base.yaml  move_base.yaml~  planner.yaml
catkin_ws/src/trog_2dnav/launch/: move_base.launch
catkin_ws/src/trog_bringup/: README.md
catkin_ws/src/trog_bringup/launch/: bringup.launch  manul.launch  save_data.launch
catkin_ws/src/trog_control/: CMakeLists.txt
catkin_ws/src/trog_control/config/: control.yaml  control_gazebo.yaml  localization.yaml  teleop_xbox.yaml  teleop_xbox_gazebo.yaml
catkin_ws/src/trog_control/include/trog_control/: trog_hardware.h
catkin_ws/src/trog_control/launch/: control.launch  control_driver.launch  teleop.launch
catkin_ws/src/trog_control/src/: trog_control_node.cpp  trog_hardware.cpp
catkin_ws/src/trog_description/launch/: description.launch
catkin_ws/src/trog_description/meshes/: base_link.dae  top_plate.dae  wheel.dae
catkin_ws/src/trog_description/urdf/: decorations.urdf.xacro  empty.urdf  troggie.urdf.xacro  wheel.urdf.xacro
catkin_ws/src/trog_gazebo/: CMakeLists.txt  package.xml
catkin_ws/src/trog_gazebo/launch/: Antbot_empty_world.launch  Antbot_playpen_world.launch  bringup_gazebo.launch  playpen.launch  spawn_Antbot.launch
catkin_ws/src/trog_mapping/: README.md
catkin_ws/src/trog_mapping/config/: cartographer_params.lua  gmapping_params.yaml
catkin_ws/src/trog_mapping/launch/: amcl.launch  amcl_diff.launch  known_map.launch  slam.launch  trog_cartographer.launch  trog_gmapping.launch  trog_slam_toolbox.launch
catkin_ws/src/trog_mapping/maps/: Cartographer_101521.pgm  Cartographer_101521.yaml  Cartographer_e4_102221.pgm  Cartographer_e4_102221.yaml  SMERC_lab_100821.pgm  SMERC_lab_100821.yaml  (+24 more)
catkin_ws/src/trog_pc2l/: CMakeLists.txt  package.xml
catkin_ws/src/trog_rviz/: CMakeLists.txt  package.xml
catkin_ws/src/trog_sensors/: CMakeLists.txt
catkin_ws/src/trog_sensors/launch/: sensors.launch
catkin_ws/src/trog_sensors/src/: sonar_node.cpp  sonar_node.cpp~
catkin_ws/src/trog_simulator/: package.xml
catkin_ws/src/velodyne_description/: CMakeLists.txt
catkin_ws/src/velodyne_gazebo_plugins/: CMakeLists.txt
documentation/assembly/: Velodyne.md
(+44 files in other folders)
